--- a/LifeCycleH_W_Less2/app/src/main/res/layout-land/activity_main.xml
+++ b/LifeCycleH_W_Less2/app/src/main/res/layout-land/activity_main.xml
@@ -76,7 +76,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
         />
-
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Result: "
+        app:layout_constraintTop_toBottomOf="@+id/editThird_Text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        android:layout_marginTop="20dp"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
