--- a/LifeCycleH_W_Less2/app/src/main/res/layout/activity_main.xml
+++ b/LifeCycleH_W_Less2/app/src/main/res/layout/activity_main.xml
@@ -23,20 +23,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="20dp"
         />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerMain"
-        android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/galaxy"
-        android:scaleType="fitXY"
-        android:outlineSpotShadowColor="@color/black"
-        />
-
-
 
     <EditText
         android:id="@+id/editFirst_Text"
@@ -46,7 +32,7 @@
         android:textAlignment="center"
         android:gravity="center_horizontal"
         android:focusable="true"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/headerMain"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="40dp"
@@ -84,13 +70,26 @@
         android:id="@+id/btn_calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editThird_Text"
+        app:layout_constraintTop_toBottomOf="@+id/result_text"
         android:layout_marginTop="40dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:backgroundTint="#6FCB16"
         android:text="calculate"
         />
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Result: "
+        app:layout_constraintTop_toBottomOf="@+id/editThird_Text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        android:layout_marginTop="20dp"
+        />
+
+
 
 
 
